tools/gitui/test/snapshots/cli_output_tests__cli_cascading_divergence.snap
---
source: hs-github-tools/tools/gitui/test/cli_output_tests.rs
expression: clean_output
---
* main
    branch-a
      branch-b [DIVERGED]
        branch-c
