tools/gitui/test/snapshots/cli_output_tests__cli_print_diverged_tree_snapshot.snap
---
source: hs-github-tools/tools/gitui/test/cli_output_tests.rs
expression: clean_output
---
* main
    feat1
      feat2 [DIVERGED]
