tools/gitui/test/snapshots/cli_output_tests__cli_print_tree_snapshot.snap
---
source: hs-github-tools/tools/gitui/test/cli_output_tests.rs
expression: clean_output
---
  feat1
    feat1-child
* main
    feat2 [MERGED]
